--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
             "LucasWpl\\GoogleTest\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "LucasWpl\\GoogleTest\\Test\\": "tests/"
+        }
+    },
     "authors": [
         {
             "name": "Pedro Lucas",
@@ -13,5 +18,8 @@
     ],
     "require": {
         "google/apiclient": "^2.12"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
     }
 }
